--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,9 @@
 @import './markdown.css';
 
+:root {
+  --header-background: #f5f5f5;
+}
+
 html,
 body,
 #app {
@@ -8,9 +12,20 @@ body,
   padding: 0;
 }
 
+h1 {
+  color: #edf0f1
+}
+
+html:not(.dark) {
+  background: #f5f5f5;
+  color-scheme: light;
+  color: #4d6a9a;
+}
+
 html.dark {
-  background: #121212;
+  background: #222222;
   color-scheme: dark;
+  color: #c7c7c7;
 }
 
 #nprogress {
@@ -18,7 +33,7 @@ html.dark {
 }
 
 #nprogress .bar {
-  background: rgb(13,148,136);
+  background: #4d6a9a;
   opacity: 0.75;
   position: fixed;
   z-index: 1031;
